log
Sat Apr  9 02:28:49 UTC 2022: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  4|5
total_score: 20/70
d915c6c
Sat Apr  9 02:29:18 UTC 2022: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:72:34: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
     for (long i = 0; i < capacity, i++)
                                  ^
hashmap.c:72:39: error: expected ‘;’ before ‘)’ token
     for (long i = 0; i < capacity, i++)
                                       ^
hashmap.c:81:15: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return map->buckets;
            ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bb16c40
Sat Apr  9 02:29:32 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:81:15: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return map->buckets;
            ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
064ac4b
Sat Apr  9 02:29:49 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cac2b9b
Sat Apr  9 02:30:16 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:72:25: error: expected expression before ‘<’ token
     for (long i = 0; i =< capacity; i++)
                         ^
Compilation failed
49a8d4d
Sat Apr  9 02:30:25 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bde9c2e
Sat Apr  9 02:31:48 UTC 2022: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
948c300
Sat Apr  9 02:32:06 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:78:5: error: ‘return’ with no value, in function returning non-void [-Werror]
     return;
     ^~~~~~
hashmap.c:70:11: note: declared here
 HashMap * createMap(long capacity) {
           ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9702515
Sat Apr  9 02:33:05 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:78:15: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return map->buckets;
            ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b34a194
Sat Apr  9 02:33:17 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
616468d
Sat Apr  9 02:33:41 UTC 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
c75435d
Sat Apr  9 02:37:15 UTC 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:73:34: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
     for (long i = 0; i < capacity, i++)
                                  ^
hashmap.c:73:39: error: expected ‘;’ before ‘)’ token
     for (long i = 0; i < capacity, i++)
                                       ^
cc1: all warnings being treated as errors
Compilation failed
5b71610
Sat Apr  9 02:37:34 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a717a24
Sat Apr  9 02:37:54 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
39bdf3b
Sat Apr  9 02:42:20 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:73:21: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   Pair **buckets = (pair *) malloc (capacity * sizeof(Pair))
                     ^~~~
                     Pair
hashmap.c:73:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:73:27: error: expected expression before ‘)’ token
   Pair **buckets = (pair *) malloc (capacity * sizeof(Pair))
                           ^
hashmap.c:74:22: error: ‘i’ undeclared (first use in this function)
     for (long i = 0; i < capacity-1; i++)
                      ^
hashmap.c:74:41: error: expected ‘;’ before ‘)’ token
     for (long i = 0; i < capacity-1; i++)
                                         ^
hashmap.c:74:41: error: expected statement before ‘)’ token
hashmap.c:73:10: error: unused variable ‘buckets’ [-Werror=unused-variable]
   Pair **buckets = (pair *) malloc (capacity * sizeof(Pair))
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
15e5c7d
Sat Apr  9 02:43:17 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:73:21: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   Pair **buckets = (pair *) malloc (capacity * sizeof(Pair));
                     ^~~~
                     Pair
hashmap.c:73:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:73:27: error: expected expression before ‘)’ token
   Pair **buckets = (pair *) malloc (capacity * sizeof(Pair));
                           ^
hashmap.c:73:10: error: unused variable ‘buckets’ [-Werror=unused-variable]
   Pair **buckets = (pair *) malloc (capacity * sizeof(Pair));
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2ff75d6
